--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="primary col-md-8 col-sm-12 col-xs-12">
         <section class="about section">
           <div class="section-inner">
-            <h2 class="heading">A Propos de moi</h2>
+            <h2 class="heading">A propos de moi</h2>
             <div class="content">
               <p>Actuellement en classe de Terminale Bac pro SEN TR et étant admis en BTS SIO option SLAM, au sein de l'école St Charles-Ste Croix, je suis actuellement a la recherche d'un contrat d'apprentisage</p>
               <p>Fort de mes précédentes expériences dans le monde du travail j’ai pu accroître mais compétence en C, PHP, HTML et les base en C# j’ai également développer mes activités dans la gestion de serveur Debian et CentOs dans une start-up situé
@@ -373,7 +373,7 @@
         <!--//section-->
         <aside class="blog aside section">
           <div class="section-inner">
-            <h2 class="heading">Veille informatique</i> </h2>
+            <h2 class="heading">Veille informatique</h2>
             <div id="rss-feeds" class="content">
             </div>
             <!--//content-->
@@ -384,7 +384,7 @@
         <!--//section-->
         <aside class="list conferences aside section">
           <div class="section-inner">
-            <h2 class="heading">Téléchargement</i></h2>
+            <h2 class="heading">Téléchargement</h2>
             <div class="content">
               <ul class="list-unstyled">
                 <li><i class="fa fa-download"></i> <a download="Lettre-De-Motivation.pdf" href="http://james.zemouri.tk/documents/Lettre_de_motivation_alternance_06_04_2017.pdf">Ma lettre de motivation</a>
