mise a jour du lien linkedin

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <ul class="social list-inline">
           <li><a href="https://plus.google.com/u/1/107599180007084751669?hl=fr" target="_blank"><i class="fa fa-google-plus"></i></a></li>
           <li><a href="https://github.com/JamesZEMOURI" target="_blank"><i class="fa fa-github-alt"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/james-z-5505a3141/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/james-ZEMOURI" target="_blank"><i class="fa fa-linkedin"></i></a></li>
           <li><a href="https://soundcloud.com/rpringles" target="_blank"><i class="fa fa-soundcloud"></i></a></li>
         </ul>
       </div>
