sitemap correction et shema correction

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html itemscope itemtype="http://schema.org/Product" lang="fr">
+<html itemscope itemtype="http://schema.org/Person" lang="fr">
 
 <head>
   <meta charset="utf-8" />
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="James ZEMOURI Personnal information" />
   <meta name="keywords" content="james,James Zemouri,ZEMOURI,JAMES ZEMOURI,james ZEMOURI,cv,lettre-de-motivation" />
-  <meta name="robots" content="index,nofollow" />
+  <meta name="robots" content="index,follow" />
   <link rel="author" href="https://plus.google.com/u/1/107599180007084751669" />
   <link rel="publisher" href="https://plus.google.com/u/1/107599180007084751669" />
   <link rel="canonical" href="http://james.zemouri.tk" />
