--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="James ZEMOURI Personnal information" />
   <meta name="keywords" content="james,James Zemouri,ZEMOURI,JAMES ZEMOURI,james ZEMOURI,cv,lettre-de-motivation" />
+  <meta name="birthDate" content="04/12/1999" />
   <meta name="robots" content="index,follow" />
   <link rel="author" href="https://plus.google.com/u/1/107599180007084751669" />
   <link rel="publisher" href="https://plus.google.com/u/1/107599180007084751669" />
