--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="James ZEMOURI Personnal information" />
   <meta name="keywords" content="james,James Zemouri,ZEMOURI,JAMES ZEMOURI,james ZEMOURI,cv,lettre-de-motivation" />
-  <meta name="birthDate" content="04/12/1999" />
   <meta name="robots" content="index,follow" />
   <link rel="author" href="https://plus.google.com/u/1/107599180007084751669" />
   <link rel="publisher" href="https://plus.google.com/u/1/107599180007084751669" />
@@ -30,6 +29,7 @@
   <!-- Google+ -->
   <meta itemprop="name" content="James ZEMOURI" />
   <meta itemprop="description" content="James ZEMOURI Personnal information" />
+  <meta itemprop="birthDate" content="04/12/1999" />
   <meta itemprop="image" content="http://james.zemouri.tk/assets/images/profile.png" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
