--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
   <!-- Google+ -->
   <meta itemprop="name" content="James ZEMOURI" />
   <meta itemprop="description" content="James ZEMOURI Personnal information" />
-  <meta itemprop="birthDate" content="04/12/1999" />
+  <meta itemprop="birthDate" content="1999-04-12" />
+  <meta itemprop="telephone" content="0760502431" />
+  ContactPoint
   <meta itemprop="image" content="http://james.zemouri.tk/assets/images/profile.png" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
