--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta itemprop="description" content="James ZEMOURI Personnal information" />
   <meta itemprop="birthDate" content="1999-04-12" />
   <meta itemprop="telephone" content="0760502431" />
-  ContactPoint
+  <meta itemprop="email" content="jameszemouri@icloud.com" />
   <meta itemprop="image" content="http://james.zemouri.tk/assets/images/profile.png" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
