--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
   <meta itemprop="description" content="James ZEMOURI Personnal information" />
   <meta itemprop="birthDate" content="1999-04-12" />
   <meta itemprop="telephone" content="0760502431" />
+  <meta itemprop="familyName" content="ZEMOURI" />
+  <meta itemprop="gender" content="Male" />
+  <meta itemprop="jobTitle" content="Male" />
   <meta itemprop="email" content="jameszemouri@icloud.com" />
   <meta itemprop="image" content="http://james.zemouri.tk/assets/images/profile.png" />
   <!-- Twitter -->
@@ -78,7 +81,7 @@
             <h2 class="heading">A propos de moi</h2>
             <div class="content">
               <p>Actuellement en classe de Terminale Bac pro SEN TR et étant admis en BTS SIO option SLAM, au sein de l'école St Charles-Ste Croix, je suis actuellement a la recherche d'un contrat d'apprentisage</p>
-              <p>Fort de mes précédentes expériences dans le monde du travail j’ai pu accroître mais compétence en C, PHP, HTML et les base en C# j’ai également développer mes activités dans la gestion de serveur Debian et CentOs dans une start-up situé
+              <p>Fort de mes précédentes expériences dans le monde du travail j’ai pu accroître mes compétence en C, PHP, HTML et les base en C# j’ai également développer mes activités dans la gestion de serveur Debian et CentOs dans une start-up situé
                 à l'intérieur d'un espace coworking, je serais m’intégrer et suivre la marche de l’entreprise rapidement</p>
             </div>
             <!--//content-->
@@ -101,7 +104,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12"> <img class="img-responsive" src="assets/images/projects/brain.png" alt="project name" /> </div>
                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                   <h3 class="title">Centre d'intérêt</h3>
-                  <p>Mais centre d'intérêt sont varié je m'intéresse aussi bien à l'électronique en général, l'informatique, la musique, je me tiens au courant de toute les dernières informations liées aux artistes, la dernière carte-mère ou la mise à jour
+                  <p>Mes centre d'intérêt sont varié je m'intéresse aussi bien à l'électronique en général, l'informatique, la musique, je me tiens au courant de toute les dernières informations liées aux artistes, la dernière carte-mère ou la mise à jour
                     d'une API </p>
                 </div>
                 <!--//desc-->
@@ -113,7 +116,7 @@
                   <h3 class="title">Compétence informatique</h3>
                   <p>Grâce à l'école, internet et mes recherches j'ai pu lire et apprendre à maitriser certains logiciels tel que GIT, améliorer mes compétences sur les systèmes d'exploitation t'elle que Mac Osx el capitaine, Yosemite, Windows 10,Windows
                     7 ; des distributions Linux Debian, Ubuntu ; accroitre mes compétences dans le dépannage informatique dans le milieu pro ou particulier dépanner la famille des amis, Apprendre par soi même avec des tutos recopiés, améliorer, recommencer.
-                    Lire puis Pratiquer pour intégrer la logique de programmation Je suis autodidacte pour la plupart de mais connaissance. </p>
+                    Lire puis Pratiquer pour intégrer la logique de programmation Je suis autodidacte pour la plupart de mes connaissance. </p>
                 </div>
                 <!--//desc-->
               </div>
@@ -121,8 +124,8 @@
               <div class="item row">
                 <div class="col-md-4 col-sm-4 col-xs-12"> <img class="img-responsive" src="assets/images/projects/up.png" alt="project name" /> </div>
                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                  <h3 class="title">Mes qualiter &amp; mais défauts</h3>
-                  <p>Mais amis disent de moi que je suis travailleur, je ne m'arrête pas sans avoir trouvé le problème est l'avoir résolu, que je suis procrastinateur, j'ai tendance à remettre a demain se que je pourrais faire aujourd’hui. On me qualifie
+                  <h3 class="title">Mes qualités &amp; mes défauts</h3>
+                  <p>Mes amis disent de moi que je suis travailleur, je ne m'arrête pas sans avoir trouvé le problème est l'avoir résolu, que je suis procrastinateur, j'ai tendance à remettre a demain se que je pourrais faire aujourd’hui. On me qualifie
                     aussi de penseur stratégique, j'examine tout les angles d'un problème, je suis efficace, je me préoccupe d’abord des tâches importantes ; impatiens, j'ai du mal à prendre mon temps pour expliquer les choses. </p>
                 </div>
                 <!--//desc-->
