--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <meta itemprop="telephone" content="0760502431" />
   <meta itemprop="familyName" content="ZEMOURI" />
   <meta itemprop="gender" content="Male" />
-  <meta itemprop="jobTitle" content="Male" />
+  <meta itemprop="jobTitle" content="Etudiant" />
   <meta itemprop="email" content="jameszemouri@icloud.com" />
   <meta itemprop="image" content="http://james.zemouri.tk/assets/images/profile.png" />
   <!-- Twitter -->
