--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="content">
               <p>Actuellement en classe de Terminale Bac pro SEN TR et étant admis en BTS SIO option SLAM, au sein de l'école St Charles-Ste Croix, je suis actuellement a la recherche d'un contrat d'apprentisage</p>
               <p>Fort de mes précédentes expériences dans le monde du travail j’ai pu accroître mes compétence en C, PHP, HTML et les base en C# j’ai également développer mes activités dans la gestion de serveur Debian et CentOs dans une start-up situé
-                à l'intérieur d'un espace coworking, je serais m’intégrer et suivre la marche de l’entreprise rapidement</p>
+                à l'intérieur d'un espace coworking, je serais m’intégré et suivre la marche de l’entreprise rapidement</p>
             </div>
             <!--//content-->
           </div>
@@ -104,7 +104,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12"> <img class="img-responsive" src="assets/images/projects/brain.png" alt="project name" /> </div>
                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                   <h3 class="title">Centre d'intérêt</h3>
-                  <p>Mes centre d'intérêt sont varié je m'intéresse aussi bien à l'électronique en général, l'informatique, la musique, je me tiens au courant de toute les dernières informations liées aux artistes, la dernière carte-mère ou la mise à jour
+                  <p>Mes centre d'intérêt sont varié, je m'intéresse aussi bien à l'électronique en général, l'informatique, la musique, je me tiens au courant de toute les dernières informations liées aux artistes, la dernière carte-mère ou la mise à jour
                     d'une API </p>
                 </div>
                 <!--//desc-->
@@ -114,7 +114,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12"> <img class="img-responsive" src="assets/images/projects/computer.png" alt="project name" /> </div>
                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                   <h3 class="title">Compétence informatique</h3>
-                  <p>Grâce à l'école, internet et mes recherches j'ai pu lire et apprendre à maitriser certains logiciels tel que GIT, améliorer mes compétences sur les systèmes d'exploitation t'elle que Mac Osx el capitaine, Yosemite, Windows 10,Windows
+                  <p>Grâce à l'école, internet et mes recherches j'ai pu lire et apprendre à maitrisé certains logiciels tel que GIT, améliorer mes compétences sur les systèmes d'exploitation t'elle que Mac Osx el capitaine, Yosemite, Windows 10,Windows
                     7 ; des distributions Linux Debian, Ubuntu ; accroitre mes compétences dans le dépannage informatique dans le milieu pro ou particulier dépanner la famille des amis, Apprendre par soi même avec des tutos recopiés, améliorer, recommencer.
                     Lire puis Pratiquer pour intégrer la logique de programmation Je suis autodidacte pour la plupart de mes connaissance. </p>
                 </div>
