--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon-precomposed" href="favicon.png" />
   <title>James ZEMOURI</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="James ZEMOURI Personnal information" />
+  <meta name="description" content="A propos de james zemouri James ZEMOURI" />
   <meta name="keywords" content="james,James Zemouri,ZEMOURI,JAMES ZEMOURI,james ZEMOURI,cv,lettre-de-motivation" />
   <meta name="robots" content="index,follow" />
   <link rel="author" href="https://plus.google.com/u/1/107599180007084751669" />
