--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li><a href="https://soundcloud.com/rpringles" target="_blank"><i class="fa fa-soundcloud"></i></a></li>
         </ul>
       </div>
-      <!--//profile--><a class="btn btn-cta-primary pull-right" href="mailto:jameszemouri@icloud.com"><i class="fa fa-paper-plane"></i>&nbsp;Me Conacter</a> </div>
+      <!--//profile--><a class="btn btn-cta-primary pull-right" href="mailto:jameszemouri@icloud.com"><i class="fa fa-paper-plane"></i>&nbsp;Me Contacter</a> </div>
     <!--//container-->
   </header>
   <!--//header-->
