--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <li><a href="https://plus.google.com/u/1/107599180007084751669?hl=fr" target="_blank"><i class="fa fa-google-plus"></i></a></li>
           <li><a href="https://github.com/JamesZEMOURI" target="_blank"><i class="fa fa-github-alt"></i></a></li>
           <li><a href="https://www.linkedin.com/in/james-ZEMOURI" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-          <li><a href="https://soundcloud.com/rpringles" target="_blank"><i class="fa fa-soundcloud"></i></a></li>
+          <li><a href="https://soundcloud.com/jameszemouri" target="_blank"><i class="fa fa-soundcloud"></i></a></li>
         </ul>
       </div>
       <!--//profile--><a class="btn btn-cta-primary pull-right" href="mailto:jameszemouri@icloud.com"><i class="fa fa-paper-plane"></i>&nbsp;Me Contacter</a> </div>
