--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
           <div class="section-inner">
             <h2 class="heading">A propos de moi</h2>
             <div class="content">
-              <p>Actuellement en classe de Terminale Bac pro SEN TR et étant admis en BTS SIO option SLAM, au sein de l'école St Charles-Ste Croix, je suis actuellement a la recherche d'un contrat d'apprentisage</p>
-              <p>Fort de mes précédentes expériences dans le monde du travail j’ai pu accroître mes compétence en C, PHP, HTML et les base en C# j’ai également développer mes activités dans la gestion de serveur Debian et CentOs dans une start-up situé
-                à l'intérieur d'un espace coworking, je serais m’intégré et suivre la marche de l’entreprise rapidement</p>
+              <p> Actuellement en classe de Terminale Bac pro SEN TR et étant admis en BTS SIO option SLAM, au sein de l'école St Charles-Ste Croix, je suis actuellement à la recherche d'un contrat d'apprentissage Fort de mes précédentes expériences dans
+                le monde du travail j’ai pu accroître mes compétences en C, PHP, HTML et les base en C# j’ai également développé mes activités dans la gestion de serveur Debian et Centos dans une start-up située à l'intérieur d'un espace coworking, je
+                serais m’intégrer et suivre la marche de l’entreprise rapidement </p>
             </div>
             <!--//content-->
           </div>
@@ -104,8 +104,8 @@
                 <div class="col-md-4 col-sm-4 col-xs-12"> <img class="img-responsive" src="assets/images/projects/brain.png" alt="project name" /> </div>
                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                   <h3 class="title">Centre d'intérêt</h3>
-                  <p>Mes centre d'intérêt sont varié, je m'intéresse aussi bien à l'électronique en général, l'informatique, la musique, je me tiens au courant de toute les dernières informations liées aux artistes, la dernière carte-mère ou la mise à jour
-                    d'une API </p>
+                  <p>Mes centres d'intérêt sont variés, je m'intéresse aussi bien à l'électronique en général, l'informatique, la musique, je me tiens au courant de toutes les dernières informations liées aux artistes, la dernière carte-mère ou la mise à
+                    jour d'une API</p>
                 </div>
                 <!--//desc-->
               </div>
@@ -114,9 +114,9 @@
                 <div class="col-md-4 col-sm-4 col-xs-12"> <img class="img-responsive" src="assets/images/projects/computer.png" alt="project name" /> </div>
                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                   <h3 class="title">Compétence informatique</h3>
-                  <p>Grâce à l'école, internet et mes recherches j'ai pu lire et apprendre à maitrisé certains logiciels tel que GIT, améliorer mes compétences sur les systèmes d'exploitation t'elle que Mac Osx el capitaine, Yosemite, Windows 10,Windows
-                    7 ; des distributions Linux Debian, Ubuntu ; accroitre mes compétences dans le dépannage informatique dans le milieu pro ou particulier dépanner la famille des amis, Apprendre par soi même avec des tutos recopiés, améliorer, recommencer.
-                    Lire puis Pratiquer pour intégrer la logique de programmation Je suis autodidacte pour la plupart de mes connaissance. </p>
+                  <p>Grâce à l'école, internet et mes recherches j'ai pu lire et apprendre à maitriser certains logiciels tels que GIT, améliorer mes compétences sur les systèmes d'exploitation t'elle que Mac Osx el capitaine, Yosemite, Windows 10, Windows
+                    7 ; des distributions Linux Debian, Ubuntu ; accroitre mes compétences dans le dépannage informatique dans le milieu pro ou particulier dépanner la famille des amis, Apprendre par soi-même avec des tutos recopiés, améliorer, recommencer.
+                    Lire puis Pratiquer pour intégrer la logique de programmation Je suis autodidacte pour la plupart de mes connaissances.</p>
                 </div>
                 <!--//desc-->
               </div>
@@ -125,8 +125,8 @@
                 <div class="col-md-4 col-sm-4 col-xs-12"> <img class="img-responsive" src="assets/images/projects/up.png" alt="project name" /> </div>
                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                   <h3 class="title">Mes qualités &amp; mes défauts</h3>
-                  <p>Mes amis disent de moi que je suis travailleur, je ne m'arrête pas sans avoir trouvé le problème est l'avoir résolu, que je suis procrastinateur, j'ai tendance à remettre a demain se que je pourrais faire aujourd’hui. On me qualifie
-                    aussi de penseur stratégique, j'examine tout les angles d'un problème, je suis efficace, je me préoccupe d’abord des tâches importantes ; impatiens, j'ai du mal à prendre mon temps pour expliquer les choses. </p>
+                  <p>Mes amis disent de moi que je suis travailleur, je ne m'arrête pas sans avoir trouvé le problème est l'avoir résolu, que je suis procrastinateur, j'ai tendance à remettre à demain ce que je pourrais faire aujourd’hui. On me qualifie
+                    aussi de penseur stratégique, j'examine tous les angles d'un problème, je suis efficace, je me préoccupe d’abord des tâches importantes ; impatiens, j'ai du mal à prendre mon temps pour expliquer les choses.</p>
                 </div>
                 <!--//desc-->
               </div>
@@ -159,13 +159,13 @@
               <div class="item">
                 <h3 class="title">➢	Dévelopement Shaker Technologies -&nbsp;<span class="place">Stage du</span> <span class="year">14/03/2016 - 01/04/2016</span></h3>
                 <p>Espace coworking (coup de pouce 49) - Angers </p>
-                <p>J'ai pu découvrir la vie d'une startup dans un espace de coworking tout en me formant en C, C++, html et PHP. </p>
+                <p>J'ai pu découvrir la vie d'une startup dans un espace de coworking tout en me formant en C, C++, HTML et PHP. </p>
               </div>
               <!--//item-->
               <div class="item">
                 <h3 class="title">➢	Assembleur informatique -&nbsp;<span class="place">3 Stages de</span> <span class="year">(2015 - 2017)</span></h3>
                 <p>Rescue - electro informatique - Trélazé</p>
-                <p>Tout les stages réalisés au sein de cette entreprise mon permis de nouer une relation de confiance et ainsi gagner énormément en responsabilité et autonomie, de maître en pratique la formation continue. </p>
+                <p>Tous les stages réalisés au sein de cette entreprise mon permis de nouer une relation de confiance et ainsi gagner énormément en responsabilité et autonomie, de maître en pratique la formation continue. </p>
               </div>
               <!--//item-->
               <div class="item">
@@ -375,7 +375,6 @@
   <script type="text/javascript" src="assets/plugins/github-activity/src/github-activity.js"></script>
   <!-- custom js -->
   <script type="text/javascript" src="assets/js/main.js"></script>
-
 </body>
 
 </html>
