--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
               <!--//item-->
               <div class="item">
                 <h3 class="title"><i class="fa fa-graduation-cap"></i>&nbsp;BAC PRO SEN TR</h3>
-                <h4 class="university">Lycée Chevrollier - Angers <span class="year">(2015-2017)&nbsp;<i class="fa fa-refresh fa-spin "></i> </span></h4> </div>
+                <h4 class="university">Lycée Chevrollier - Angers <span class="year">(2015-2017)&nbsp;</span></h4> </div>
               <!--//item-->
               <div class="item">
                 <h3 class="title"><i class="fa fa-graduation-cap"></i>&nbsp;BEP Système Electronique Numérique</h3>
