--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="favicon.png" />
   <link rel="icon" type="image/png" href="favicon.png" />
   <link rel="apple-touch-icon-precomposed" href="favicon.png" />
-  <title>James ZEMOURI</title>
+  <title>James ZEMOURI 👨‍🎓</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="A propos de james zemouri James ZEMOURI" />
   <meta name="keywords" content="james,James Zemouri,ZEMOURI,JAMES ZEMOURI,james ZEMOURI,cv,lettre-de-motivation" />
