http up for index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html itemscope itemtype="http://schema.org/Person" lang="fr">
+<html itemscope itemtype="https://schema.org/Person" lang="fr">
 
 <head>
   <meta charset="utf-8" />
@@ -13,19 +13,19 @@
   <meta name="robots" content="index,follow" />
   <link rel="author" href="https://plus.google.com/u/1/107599180007084751669" />
   <link rel="publisher" href="https://plus.google.com/u/1/107599180007084751669" />
-  <link rel="canonical" href="http://james.zemouri.tk" />
+  <link rel="canonical" href="https://james.zemouri.tk" />
   <!-- Webmaster -->
   <meta name="msvalidate.01" content="EBD4E81384F624CDB6513AD6EA5975A8" />
   <meta name="google-site-verification" content="fb4f8953a0f4d822" />
   <meta name="google-site-verification" content="OEdhBbLGwTqMTHXkPdHP248C3_xconVX3nerkZuT8uc" />
   <!-- Facebook -->
-  <meta property="og:url" content="http://james.zemouri.tk" />
+  <meta property="og:url" content="https://james.zemouri.tk" />
   <meta property="og:description" content="James ZEMOURI Personnal information" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="James ZEMOURI" />
   <meta property="og:site_name" content="James ZEMOURI" />
-  <meta property="og:see_also" content="http://james.zemouri.tk" />
-  <meta property="og:image" content="http://james.zemouri.tk/assets/images/profile.png" />
+  <meta property="og:see_also" content="https://james.zemouri.tk" />
+  <meta property="og:image" content="https://james.zemouri.tk/assets/images/profile.png" />
   <!-- Google+ -->
   <meta itemprop="name" content="James ZEMOURI" />
   <meta itemprop="description" content="James ZEMOURI Personnal information" />
@@ -35,14 +35,14 @@
   <meta itemprop="gender" content="Male" />
   <meta itemprop="jobTitle" content="Etudiant" />
   <meta itemprop="email" content="jameszemouri@icloud.com" />
-  <meta itemprop="image" content="http://james.zemouri.tk/assets/images/profile.png" />
+  <meta itemprop="image" content="https://james.zemouri.tk/assets/images/profile.png" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:url" content="http://james.zemouri.tk" />
+  <meta name="twitter:url" content="https://james.zemouri.tk" />
   <meta name="twitter:title" content="James ZEMOURI" />
   <meta name="twitter:description" content="" />
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <!-- Global CSS -->
   <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
   <!-- Plugins CSS -->
@@ -203,7 +203,7 @@
                 <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Angers, France</li>
                 <li><i class="fa fa-birthday-cake"></i><span class="sr-only">Age:</span>Né le 04/12/1999</li>
                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="mailto:jameszemouri@icloud.com">jameszemouri@icloud.com</a></li>
-                <li><i class="fa fa-link"></i><span class="sr-only">Site web:</span><a href="http://james.zemouri.tk">http://james.zemouri.tk</a></li>
+                <li><i class="fa fa-link"></i><span class="sr-only">Site web:</span><a href="https://james.zemouri.tk">https://james.zemouri.tk</a></li>
                 <li><i class="fa fa-mobile"></i> <span class="sr-only">Telephone:</span><a href="tel:0760424715">&nbsp;07 60 42 47 15</a></li>
               </ul>
             </div>
@@ -324,10 +324,10 @@
             <h2 class="heading">Téléchargement</h2>
             <div class="content">
               <ul class="list-unstyled">
-                <li><i class="fa fa-download"></i> <a download="Lettre-De-Motivation.pdf" href="http://james.zemouri.tk/documents/Lettre_de_motivation_alternance_06_04_2017.pdf">Ma lettre de motivation</a>
+                <li><i class="fa fa-download"></i> <a download="Lettre-De-Motivation.pdf" href="https://james.zemouri.tk/documents/Lettre_de_motivation_alternance_06_04_2017.pdf">Ma lettre de motivation</a>
                   <p>(Contrat d'apprentisage)</p>
                 </li>
-                <li><i class="fa fa-download"></i> <a download="CV.pdf" href="http://james.zemouri.tk/documents/CV_13_04_2017.pdf">Mon CV</a> </li>
+                <li><i class="fa fa-download"></i> <a download="CV.pdf" href="https://james.zemouri.tk/documents/CV_13_04_2017.pdf">Mon CV</a> </li>
                 <li><i class="fa fa-download"></i> <a href="#">Mon projet professionnel</a> </li>
               </ul>
             </div>
@@ -358,7 +358,7 @@
   <!-- ******FOOTER****** -->
   <footer class="footer">
     <div class="container text-center">
-      <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */--><small class="copyright">James ZEMOURI 2016-2017 <a href="http://themes.3rdwavemedia.com" target="_blank">Credit <i class="fa fa-creative-commons"></i></a> </small> </div>
+      <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */--><small class="copyright">James ZEMOURI 2016-2017 <a href="https://themes.3rdwavemedia.com" target="_blank">Credit <i class="fa fa-creative-commons"></i></a> </small> </div>
     <!--//container-->
   </footer>
   <!--//footer-->
